# learn-anything

./: .gitignore  Makefile
algorithm/: go.mod
algorithm-rs/: Cargo.toml
algorithm-rs/src/: main.rs
algorithm-rs/src/map/: mod.rs  orderedmap.rs
algorithm-rs/src/tree/: binary_tree.rs  mod.rs
algorithm/consistent-hash/: hash.go  hash_test.go
algorithm/consistent_hash/: hash.go  hash_test.go
algorithm/heap/: heap.go  heap_test.go
command-line-rust/: Makefile  readme.md
command-line-rust/01/hello/: Cargo.toml
command-line-rust/01/hello/src/: main
command-line-rust/01/hello/tests/: cli.rs
command-line-rust/02/echor/src/: main.rs
rust-pratices/: Cargo.toml
rust-pratices/01_rcli/: 1.base64.txt  1.csv  Cargo.toml
rust-pratices/01_rcli/assets/: blake3.txt  normal.txt  pk  sk
rust-pratices/01_rcli/src/: main.rs
rust-pratices/01_rcli/src/cli/: base64.rs  csv.rs  genpass.rs  http.rs  mod.rs  text.rs
rust-pratices/01_rcli/src/process/: mod.rs  process_base64.rs  process_csv.rs  process_genpass.rs  process_http.rs  process_text.rs
rust-pratices/01_rcli/src/utils/: mod.rs  password.rs  reader.rs  (+1 more)
rust-pratices/02_concurrency/: Cargo.toml
rust-pratices/02_concurrency/examples/: channel.rs  dredis.rs  matrix.rs  thread.rs  use_ametrics.rs  use_metrics.rs  vector.rs
rust-pratices/02_concurrency/src/: main.rs  metrics.rs
rust-pratices/02_concurrency/src/metrics/: ametrics.rs  metrics.rs  mod.rs
rust-pratices/03_simple_redis/: Cargo.toml
rust-pratices/03_simple_redis/src/: main.rs
rust-pratices/assets/: book.csv
scripts/: clean.sh
(+3 files in other folders)
